fix mobile spacing so nav works

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -532,7 +532,7 @@ form.example::after {
     padding-bottom:100px;
   }
   .section-title {
-    padding-top: 50px
+    padding-top: 75px
   }
 
   form.example button {
